; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_init-db.c_guess_repository_type.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_init-db.c_guess_repository_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c".git\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"/.git\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @guess_repository_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @guess_repository_type(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @strcmp(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %40

11:                                               ; preds = %1
  %12 = call i8* (...) @xgetcwd()
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @strcmp(i8* %13, i8* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %6, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @free(i8* %19)
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %40

24:                                               ; preds = %11
  %25 = load i8*, i8** %3, align 8
  %26 = call i32 @strcmp(i8* %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %40

29:                                               ; preds = %24
  %30 = load i8*, i8** %3, align 8
  %31 = call i8* @strrchr(i8* %30, i8 signext 47)
  store i8* %31, i8** %4, align 8
  %32 = load i8*, i8** %4, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %29
  %35 = load i8*, i8** %4, align 8
  %36 = call i32 @strcmp(i8* %35, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %34
  store i32 0, i32* %2, align 4
  br label %40

39:                                               ; preds = %34, %29
  store i32 1, i32* %2, align 4
  br label %40

40:                                               ; preds = %39, %38, %28, %23, %10
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i8* @xgetcwd(...) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
